<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/insLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/battle"
    android:nestedScrollingEnabled="true"
    android:overScrollMode="always"
    android:scrollbarSize="4dp"
    android:verticalScrollbarPosition="right">
    <!--title-->
    <TextView
        android:id="@+id/Instructionstext"
        android:layout_width="352dp"
        android:layout_height="62dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="-350dp"
        android:fontFamily="sans-serif-black"
        android:text="INSTRUCTIONS"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="45sp"
        android:translationX="10dp"
        app:layout_constraintEnd_toStartOf="@+id/Welcometext"
        app:layout_constraintTop_toTopOf="parent" />
    <!--welcometext-->
    <TextView
        android:id="@+id/Welcometext"
        android:layout_width="374dp"
        android:layout_height="240dp"

        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:fontFamily="sans-serif-medium"
        android:text="Welcome to BATTLESHIP ARMADA - a tactical twist on the classic game of Battleships"
        android:textColor="#050505"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!-- instructions-->
    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="388dp"
        android:layout_height="510dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="-250dp"
        android:translationY="270dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Welcometext">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#5EFFFFFF"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/Objtext"
                android:layout_width="354dp"
                android:layout_height="117dp"
                android:layout_marginStart="14dp"
                android:layout_marginTop="18dp"
                android:fontFamily="sans-serif-medium"
                android:lineSpacingExtra="0dp"
                android:text="@string/objective"
                android:textColor="#0A433E"
                android:textSize="24sp"
                android:translationX="-15dp" />

            <TextView
                android:id="@+id/attack"
                android:layout_width="376dp"
                android:layout_height="170dp"
                android:layout_marginStart="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/attack"
                android:textColor="#0A433E"
                android:textSize="24sp"
                android:translationX="-15dp"
                android:translationY="10dp" />

            <TextView
                android:id="@+id/fortify"
                android:layout_width="365dp"
                android:layout_height="225dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/fortify"
                android:textColor="#0A433E"
                android:textSize="24sp"
                android:translationX="-1dp"
                android:translationY="20dp" />

            <TextView
                android:id="@+id/victorytext"
                android:layout_width="365dp"
                android:layout_height="225dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/Victory"
                android:textColor="#0A433E"
                android:textSize="24sp"
                android:translationY="40dp" />

            <TextView
                android:id="@+id/Tipstext"
                android:layout_width="350dp"
                android:layout_height="260dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/tips"
                android:textColor="#0A433E"
                android:textSize="24sp"
                android:translationY="-30dp" />

        </LinearLayout>
    </ScrollView>
    <!-- back button-->
    <ImageButton
        android:id="@+id/backbutton"
        android:layout_width="142dp"
        android:layout_height="132dp"
        android:layout_marginStart="-60dp"
        android:layout_marginTop="-16dp"
        android:scaleX="0.25"
        android:scaleY="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />


</androidx.constraintlayout.widget.ConstraintLayout>