<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingslayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C3928888">

    <ImageButton
        android:id="@+id/goback"
        android:layout_width="154dp"
        android:layout_height="152dp"
        android:layout_marginStart="-55dp"
        android:layout_marginTop="-50dp"
        android:scaleX="0.25"
        android:scaleY="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:text="SETTINGS"
        android:textSize="35sp"
        app:layout_constraintStart_toEndOf="@+id/goback"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/modetext"
        android:layout_width="117dp"
        android:layout_height="53dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/mode"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goback" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/darkmodeswitch"
        android:layout_width="156dp"
        android:layout_height="51dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="44dp"
        android:fontFamily="sans-serif-medium"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:text="@string/darkmode_on"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/modetext"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/soundtext"
        android:layout_width="101dp"
        android:layout_height="54dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-black"
        android:text="SOUND"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modetext" />

    <CheckBox
        android:id="@+id/enableosound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="32dp"
        android:text="ENABLE"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/soundtext"
        app:layout_constraintTop_toBottomOf="@+id/darkmodeswitch" />

    <TextView
        android:id="@+id/highscoretext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="26dp"
        android:fontFamily="sans-serif-black"
        android:text="HIGHSCORE"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/soundtext" />

    <EditText
        android:id="@+id/higgscorevalue"
        android:layout_width="181dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/highscoretext"
        app:layout_constraintTop_toBottomOf="@+id/enableosound" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-black"
        android:text="RANKING"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/highscoretext" />

    <EditText
        android:id="@+id/rankingvalue"
        android:layout_width="219dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/higgscorevalue" />

    <TextView
        android:id="@+id/accuracytext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="43dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/accuracy"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/accuracyvalue"
        android:layout_width="209dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/accuracytext"
        app:layout_constraintTop_toBottomOf="@+id/rankingvalue" />

    <TextView
        android:id="@+id/slogantext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/choose_you_slogan"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accuracytext" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="23dp"
        android:text="@string/bonne_bataille_commandant"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slogantext" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:text='@string/ships_ready_fire_at_will'
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:text="@string/locked_and_loaded_target_exploded"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox3" />

</androidx.constraintlayout.widget.ConstraintLayout>